--- a/exp/dev_debug/batcher_checker.ipynb
+++ b/exp/dev_debug/batcher_checker.ipynb
@@ -8,19 +8,19 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('/home/alta/Conversational/OET/al826/2022/conv_frameworks/parallel_exp')"
+    "sys.path.append('/home/alta/Conversational/OET/al826/2022/DA_classification/1.1-parallel_mask')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:00<00:00, 62.09it/s]\n"
+      "100%|██████████| 20/20 [00:00<00:00, 78.11it/s]\n"
      ]
     }
    ],
@@ -35,41 +35,25 @@
     "\n",
     "batcher = SystemHandler.batcher(\n",
     "                system='window',\n",
-    "                formatting='cls_start',\n",
+    "                formatting='utt_sep',\n",
     "                max_len=None, \n",
-    "                window_len=[500,500], \n",
+    "                batcher_args=[1, 1], \n",
     "                C=C)\n",
     "\n",
     "train = C.prepare_data(path='swda/standard/train.json', lim=20)\n",
-    "train_b = batcher(data=train, bsz=4, shuffle=False)"
+    "train_b = batcher(data=train, bsz=1, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n",
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n",
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n",
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n",
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n",
-      "[tensor(102), tensor(102), tensor(102), tensor(102)]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-d0921d678950>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutt_pos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m#print(torch.gather(b.ids, -1, b.utt_pos))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "4373\n"
      ]
     }
    ],
@@ -77,12 +61,14 @@
     "import time\n",
     "import torch\n",
     "\n",
-    "lens = []\n",
-    "for k, b in enumerate(train_b):\n",
-    "    #print((b.ids[0]==b.ids).all())\n",
-    "    #print(b.ids[:,:5]) \n",
-    "    print([b.ids[k, j] for k, j in enumerate(b.utt_pos)])\n",
-    "    time.sleep(2)"
+    "print(sum(1 for _ in train_b))\n",
+    "\n",
+    "#lens = []\n",
+    "#for k, b in enumerate(train_b):\n",
+    "    #print(b.labels)\n",
+    "    #print(C.tokenizer.decode(b.ids[0]))\n",
+    "    #print([b.ids[k, j] for k, j in enumerate(b.utt_pos)])\n",
+    "    #time.sleep(2)"
    ]
   },
   {
